<resources>
    <string name="app_name">Semaphore Manager</string>
    <string name="str_app_version_title">3.1.3</string>
    <string name="app_path">/data/data/com.semaphore.sm/scripts/"</string>
    <string name="str_cat_oc_title">Overclocking</string>
    <string name="str_oc_title">LiveOC</string>
    <string name="str_oc_summary">Change LiveOC value</string>
    <string name="str_gov_title">Active governor</string>
    <string name="str_gov_summary">Change CPU governor</string>
    <string name="str_cat_gov_title">Governors</string>
    <string name="str_scaling_min_freq_title">Min frequency</string>
    <string name="str_scaling_max_freq_title">Max frequency</string>
    <string name="str_custom_volt_title">Voltages</string>
    <string name="str_cv_enable_title">Enabled</string>
    <string name="str_cv_enable_summary">Please use it at your own risk</string>
    <string name="str_cv_apply_title">Apply</string>
    <string name="str_cv_apply_summary">Apply custom voltages</string>
    <string name="str_cv_reset_title">Reset</string>
    <string name="str_cv_reset_summary">Reset custom voltages to default</string>
    <string name="str_cv_apply_boot_title">Apply on Boot</string>
    <string name="str_cv_apply_boot_summary">Select to re-apply after boot</string>
    <string name="str_max_arm_title">Maximum Voltage</string>
    <string name="str_cv_l0_title">L0</string>
    <string name="str_cv_l1_title">L1</string>
    <string name="str_cv_l2_title">L2</string>
    <string name="str_cv_l3_title">L3</string>
    <string name="str_cv_l4_title">L4</string>
    <string name="str_cpu_table_dialog_title">CPU Table Information</string>
    <string name="str_undervolt_title">Undervolting</string>
    <string name="str_undervolt_screen_title">Undervolting parameters</string>
    <string name="str_uv_enabled_title">Enabled</string>
    <string name="str_uv_enabled_summary">Please use it at your own risk</string>
    <string name="str_uv_apply_title">Apply</string>
    <string name="str_uv_apply_summary">Apply undervolting</string>
    <string name="str_uv_reset_title">Reset</string>
    <string name="str_uv_reset_summary">Reset undervolting values to default</string>
    <string name="str_uv_apply_boot_title">Apply on Boot</string>
    <string name="str_uv_apply_boot_summary">Select to re-apply after boot</string>
    <string name="str_uv_cpu_table_title">Show CPU table</string>
    <string name="str_uv_cpu_table_summary">Select to show CPU table info</string>
    <string name="str_uv_boost_title">Boost voltages</string>
    <string name="str_uv_boost_summary">Boost voltages by 25000uV</string>
    <string name="str_uv_lower_uv_title">Lower uV</string>
    <string name="str_uv_lower_uv_summary">Undervolting for lower freqs</string>
    <string name="str_uv_higher_uv_title">Higher uV</string>
    <string name="str_uv_higher_uv_summary">Undervolting for higher freqs</string>
    <string name="str_uv_higher_khz_thres_title">Higher freq threshold</string>
    <string name="str_uv_higher_khz_thres_summary">Threshold for higher freqs</string>
    <string name="str_hp_min_online_title">Minimum online cores</string>
    <string name="str_hp_max_online_title">Maximum online cores</string>
    <string name="str_hp_enabled_title">Enabled</string>
    <string name="str_hp_up_threshold_title">Up threshold</string>
    <string name="str_hp_up_threshold_summary">Valid values 1-100</string>
    <string-array name="array_gov_entries">
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>SmartassV2</item>
        <item>Interactive</item>
    </string-array>
    <string-array name="array_gov_values">
        <item>ondemand</item>
        <item>conservative</item>
        <item>smartassV2</item>
        <item>interactive</item>
    </string-array>
    <string-array name="array_gov_entries_n4">
        <item>Ondemand</item>
        <item>Conservative</item>
        <item>Interactive</item>
    </string-array>
    <string-array name="array_gov_values_n4">
        <item>ondemand</item>
        <item>conservative</item>
        <item>interactive</item>
    </string-array>
    <string name="str_cat_leds_title">LED triggers</string>
    <string name="str_led_red_title">Red</string>
    <string name="str_led_green_title">Green</string>
    <string name="str_led_blue_title">Blue</string>
    <string name="str_read_ahead_title">SD Card read ahead</string>
    <string name="str_o_io_is_busy_title">IO is busy</string>
    <string name="str_o_sampling_down_factor_title">Sampling down factor</string>
    <string name="str_o_sampling_down_factor_summary">Valid values 1-100000</string>
    <string name="str_o_sampling_down_max_momentum_title">Sampling down max momentum</string>
    <string name="str_o_sampling_down_max_momentum_summary">Valid values 1-1000</string>
    <string name="str_o_sampling_rate_title">Sampling rate</string>
    <string name="str_o_sampling_rate_summary">Valid values 10000-100000</string>
    <string name="str_o_up_threshold_title">Up threshold</string>
    <string name="str_o_up_threshold_summary">Valid values 11-100</string>
    <string name="str_o_smooth_ui_title">Smooth UI</string>
    <string name="str_c_freq_step_title">Frequency step</string>
    <string name="str_c_freq_step_summary">Valid values 1-100</string>
    <string name="str_c_sampling_down_factor_title">Sampling down factor</string>
    <string name="str_c_sampling_down_factor_summary">Valid values 1-100000</string>
    <string name="str_c_sampling_rate_title">Sampling rate</string>
    <string name="str_c_sampling_rate_summary">Valid values 10000-100000</string>
    <string name="str_c_up_threshold_title">Up threshold</string>
    <string name="str_c_up_threshold_summary">Valid values 1-100</string>
    <string name="str_c_down_threshold_title">Down threshold</string>
    <string name="str_c_down_threshold_summary">Valid values 1-100</string>
    <string name="str_c_smooth_ui_title">Smooth UI</string>
    <string name="str_s_awake_ideal_freq_title">Awake ideal frequency</string>
    <string name="str_s_awake_ideal_freq_summary">Valid values 1-100</string>
    <string name="str_s_up_rate_title">Up rate</string>
    <string name="str_s_up_rate_summary">Valid values 1-100</string>
    <string name="str_s_down_rate_title">Down rate</string>
    <string name="str_s_down_rate_summary">Valid values 1-100</string>
    <string name="str_s_max_cpu_load_title">Max CPU load</string>
    <string name="str_s_max_cpu_load_summary">Valid values 1-100</string>
    <string name="str_s_min_cpu_load_title">Min CPU load</string>
    <string name="str_s_min_cpu_load_summary">Valid values 1-100</string>
    <string name="str_s_ramp_up_step_title">Ramp up step</string>
    <string name="str_s_ramp_up_step_summary">Valid values 1-100</string>
    <string name="str_s_ramp_down_step_title">Ramp down step</string>
    <string name="str_s_ramp_down_step_summary">Valid values 1-100</string>
    <string name="str_s_sleep_wakeup_freq_title">Sleep wakeup frequency</string>
    <string name="str_s_sleep_wakeup_freq_summary">Valid values 1-100</string>
    <string name="str_s_sleep_ideal_freq_title">Sleep ideal frequency</string>
    <string name="str_s_sleep_ideal_freq_summary">Valid values 1-100</string>
    <string name="str_s_sample_rate_jiffies_title">Sample rate jiffies</string>
    <string name="str_s_sample_rate_jiffies_summary">Valid values 1-100</string>
    <string name="str_s_smooth_ui_title">Smooth UI</string>
    <string name="str_i_hispeed_freq_title">Hi speed frequency</string>
    <string name="str_i_hispeed_freq_summary">Valid values 1-100</string>
    <string name="str_i_go_hispeed_load_title">Go hi speed load</string>
    <string name="str_i_go_hispeed_load_summary">Valid values 1-100000</string>
    <string name="str_i_min_sampling_time_title">Min sampling time</string>
    <string name="str_i_min_sampling_time_summary">Valid values 10000-100000</string>
    <string name="str_i_above_hispeed_delay_title">Above hi speed delay</string>
    <string name="str_i_above_hispeed_delay_summary">Valid values 1-100</string>
    <string name="str_i_timer_rate_title">Timer rate</string>
    <string name="str_i_timer_rate_summary">Valid values 10000-100000</string>
    <string name="str_i_timer_slack_title">Timer slack</string>
    <string name="str_i_timer_slack_summary">Valid values 10000-200000</string>
    <string name="str_i_boostpulse_duration_title">Boostpulse duration</string>
    <string name="str_i_boostpulse_duration_summary">Valid values 10000-200000</string>
    <string name="str_i_target_loads_title">Target loads</string>
    <string name="str_i_target_loads_summary">Valid values 1-100</string>
    <string name="str_cat_deep_idle_title">Deep Idle</string>
    <string name="str_deep_idle_title">Enabled</string>
    <string name="str_deep_idle_stats_title">Statistics</string>
    <string name="str_deep_idle_stats_show_title">Show statistics</string>
    <string name="str_cpu_misc_title">Miscellaneous</string>
    <string name="str_tweaks_misc_title">Miscellaneous</string>
    <string name="str_lock_min_title">Lock min freq to 100MHz</string>
    <string name="str_bluetooth_title">Power down bluetooth</string>
    <string name="str_bluetooth_summary">Enabling again requires reboot</string>
    <string name="str_logger_title">Logger</string>
    <string name="str_tun_title">TUN</string>
    <string name="str_cifs_title">CIFS</string>
    <string name="str_bigmem_title">Bigmem</string>
    <string name="str_bigmem_summary">must reboot</string>
    <string name="str_autobr_title">Semaphore Auto Brightness</string>
    <string name="str_sema_autobr_title">Enabled</string>
    <string name="str_ab_profiles_title">Profiles</string>
    <string name="str_sema_autobr_tunables_title">Tunables</string>
    <string name="str_ab_min_brightness_title">Min brightness</string>
    <string name="str_ab_min_brightness_summary"></string>
    <string name="str_ab_max_brightness_title">Max brightness</string>
    <string name="str_ab_max_brightness_summary"></string>
    <string name="str_ab_max_lux_title">Max lux</string>
    <string name="str_ab_max_lux_summary"></string>
    <string name="str_ab_instant_update_thres_title">Instant update threshold</string>
    <string name="str_ab_instant_update_thres_summary"></string>
    <string name="str_ab_effect_delay_ms_title">Effect delay</string>
    <string name="str_ab_effect_delay_ms_summary"></string>
    <string name="str_cat_scheduler_title">Schedulers</string>
    <string name="str_scheduler_title">Active scheduler</string>
    <string name="str_vibrator_title">Vibrator</string>
    <string name="str_vibrator_dc_title">Level</string>
    <string name="str_configs_title">config.gz</string>
    <string name="str_radio_si4709_i2c_title">Radio FM</string>
    <string name="str_usb_title">USB Host</string>
    <string name="str_mousedev_title">Mouse</string>
    <string name="str_xbox_title">X-Box pad</string>
    <string name="str_usbhid_title">USB HID</string>
    <string name="str_uhid_title">UHID</string>
    <string name="str_fastchg_title">Fast charge</string>
    <string name="str_fastchg_summary">Please use it at your own risk</string>
    <string name="str_wififast_title">WiFi PM FAST</string>
    <string name="str_wififast_summary">PM FAST when suspend</string>
    <string name="str_touch_enable_title">Enabled</string>
    <string name="str_touch_title">Delay</string>
    <string name="str_sai_enable_title">Enabled</string>
    <string name="str_pickup_phone_cat_title">Pickup Phone</string>
    <string name="str_pickup_phone_title">Enabled</string>
    <string name="str_pickup_phone_summary">Pickup phone without touch the screen</string>
    <string name="str_blink_leds_cat_title">Blink LEDs on Phone ringing</string>
    <string name="str_blink_leds_title">Enabled</string>
    <string name="str_blink_interval_title">Blinking interval</string>
</resources>