<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:semaphore="http://semaphore.gr">
    <PreferenceCategory
        android:title="@string/str_cat_oc_title">
        <com.semaphore.sm.SeekBarPreference android:key="oc"
                                            android:title="@string/str_oc_title"
                                            android:dialogMessage="Overclock %"
                                            android:defaultValue="100"
                                            android:text="%"
                                            semaphore:min="100"
                                            android:max="120"
        />
        <!--android:summary="@string/str_oc_summary"-->

    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/str_cat_gov_title">
        <ListPreference
            android:key="gov"
            android:entries="@array/array_gov_entries"
            android:entryValues="@array/array_gov_values"
            android:title="@string/str_gov_title"
    />
        <!--android:summary="@string/str_gov_summary"-->
    
        <PreferenceScreen
            android:title="Ondemand">
            <!--android:summary="tunables"-->

            <SwitchPreference
                android:key="o_io_is_busy"
                android:title="@string/str_o_io_is_busy_title" />
            <EditTextPreference
                android:key="o_sampling_down_factor"
                android:title="@string/str_o_sampling_down_factor_title"
                android:summary="@string/str_o_sampling_down_factor_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="o_sampling_down_max_momentum"
                android:title="@string/str_o_sampling_down_max_momentum_title"
                android:summary="@string/str_o_sampling_down_max_momentum_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="o_sampling_rate"
                android:title="@string/str_o_sampling_rate_title"
                android:summary="@string/str_o_sampling_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="o_up_threshold"
                android:title="@string/str_o_up_threshold_title"
                android:summary="@string/str_o_up_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />
            <SwitchPreference
                android:key="o_smooth_ui"
                android:title="@string/str_o_smooth_ui_title" />

        </PreferenceScreen>
        <PreferenceScreen
            android:title="Conservative">
            <!--android:summary="tunables"-->

            <EditTextPreference
                android:key="c_sampling_down_factor"
                android:title="@string/str_c_sampling_down_factor_title"
                android:summary="@string/str_c_sampling_down_factor_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_freq_step"
                android:title="@string/str_c_freq_step_title"
                android:summary="@string/str_c_freq_step_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_sampling_rate"
                android:title="@string/str_c_sampling_rate_title"
                android:summary="@string/str_c_sampling_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_up_threshold"
                android:title="@string/str_c_up_threshold_title"
                android:summary="@string/str_c_up_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_down_threshold"
                android:title="@string/str_c_down_threshold_title"
                android:summary="@string/str_c_down_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />
            <SwitchPreference
                android:key="c_smooth_ui"
                android:title="@string/str_c_smooth_ui_title" />

        </PreferenceScreen>
        <PreferenceScreen
            android:title="SmartassV2">
            <!--android:summary="tunables"-->

            <EditTextPreference
                android:key="s_awake_ideal_freq"
                android:title="@string/str_s_awake_ideal_freq_title"
                android:summary="@string/str_s_awake_ideal_freq_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_up_rate"
                android:title="@string/str_s_up_rate_title"
                android:summary="@string/str_s_up_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_down_rate"
                android:title="@string/str_s_down_rate_title"
                android:summary="@string/str_s_down_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_max_cpu_load"
                android:title="@string/str_s_max_cpu_load_title"
                android:summary="@string/str_s_max_cpu_load_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_min_cpu_load"
                android:title="@string/str_s_min_cpu_load_title"
                android:summary="@string/str_s_min_cpu_load_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_ramp_up_step"
                android:title="@string/str_s_ramp_up_step_title"
                android:summary="@string/str_s_ramp_up_step_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_ramp_down_step"
                android:title="@string/str_s_ramp_down_step_title"
                android:summary="@string/str_s_ramp_down_step_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_sleep_wakeup_freq"
                android:title="@string/str_s_sleep_wakeup_freq_title"
                android:summary="@string/str_s_sleep_wakeup_freq_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_sleep_ideal_freq"
                android:title="@string/str_s_sleep_ideal_freq_title"
                android:summary="@string/str_s_sleep_ideal_freq_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="s_sample_rate_jiffies"
                android:title="@string/str_s_sample_rate_jiffies_title"
                android:summary="@string/str_s_sample_rate_jiffies_summary"
                android:numeric="integer"
                android:inputType="number" />
            <SwitchPreference
                android:key="s_smooth_ui"
                android:title="@string/str_s_smooth_ui_title" />

        </PreferenceScreen> 
    </PreferenceCategory>
         
    <PreferenceCategory
        android:title="@string/str_cat_deep_idle_title">
        <SwitchPreference
            android:key="deep_idle"
            android:title="@string/str_deep_idle_title" />
        <SwitchPreference
            android:key="deep_idle_stats"
            android:title="@string/str_deep_idle_stats_title"
            android:dependency="deep_idle"/>
        <Preference
            android:key="deep_idle_stats_show"
            android:title="@string/str_deep_idle_stats_show_title"
            android:dependency="deep_idle_stats">
        </Preference>

        <CheckBoxPreference
            android:key="bluetooth"
            android:title="@string/str_bluetooth_title" 
            android:summary="@string/str_bluetooth_summary" 
            android:dependency="deep_idle"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/str_cpu_misc_title">
        <CheckBoxPreference
            android:key="lock_min"
            android:title="@string/str_lock_min_title" />

        
    </PreferenceCategory>

        
    
</PreferenceScreen>