<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:semaphore="http://semaphore.gr">
    <PreferenceCategory
        android:title="@string/str_cat_gov_title">
        <ListPreference
            android:key="gov"
            android:entries="@array/array_gov_entries_n4"
            android:entryValues="@array/array_gov_values_n4"
            android:title="@string/str_gov_title"
    />
        <!--android:summary="@string/str_gov_summary"-->
    
        <PreferenceScreen
            android:title="Ondemand">
            <!--android:summary="tunables"-->

            <SwitchPreference
                android:key="o_io_is_busy"
                android:title="@string/str_o_io_is_busy_title" />
            <EditTextPreference
                android:key="o_sampling_down_factor"
                android:title="@string/str_o_sampling_down_factor_title"
                android:summary="@string/str_o_sampling_down_factor_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="o_sampling_rate"
                android:title="@string/str_o_sampling_rate_title"
                android:summary="@string/str_o_sampling_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="o_up_threshold"
                android:title="@string/str_o_up_threshold_title"
                android:summary="@string/str_o_up_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />
            <SwitchPreference
                android:key="o_early_demand"
                android:title="@string/str_o_early_demand_title" />
            <EditTextPreference
                android:key="o_grad_up_threshold"
                android:title="@string/str_o_grad_up_threshold_title"
                android:summary="@string/str_o_grad_up_threshold_summary"
                android:numeric="integer"
                android:inputType="number" 
                android:dependency="o_early_demand"/>

        </PreferenceScreen>
        <PreferenceScreen
            android:title="Conservative">
            <!--android:summary="tunables"-->

            <EditTextPreference
                android:key="c_sampling_down_factor"
                android:title="@string/str_c_sampling_down_factor_title"
                android:summary="@string/str_c_sampling_down_factor_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_freq_step"
                android:title="@string/str_c_freq_step_title"
                android:summary="@string/str_c_freq_step_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_sampling_rate"
                android:title="@string/str_c_sampling_rate_title"
                android:summary="@string/str_c_sampling_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_up_threshold"
                android:title="@string/str_c_up_threshold_title"
                android:summary="@string/str_c_up_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="c_down_threshold"
                android:title="@string/str_c_down_threshold_title"
                android:summary="@string/str_c_down_threshold_summary"
                android:numeric="integer"
                android:inputType="number" />

        </PreferenceScreen>
        <PreferenceScreen
            android:title="Interactive">
            <!--android:summary="tunables"-->

            <EditTextPreference
                android:key="i_hispeed_freq"
                android:title="@string/str_i_hispeed_freq_title"
                android:summary="@string/str_i_hispeed_freq_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_go_hispeed_load"
                android:title="@string/str_i_go_hispeed_load_title"
                android:summary="@string/str_i_go_hispeed_load_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_min_sampling_time"
                android:title="@string/str_i_min_sampling_time_title"
                android:summary="@string/str_i_min_sampling_time_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_above_hispeed_delay"
                android:title="@string/str_i_above_hispeed_delay_title"
                android:summary="@string/str_i_above_hispeed_delay_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_timer_rate"
                android:title="@string/str_i_timer_rate_title"
                android:summary="@string/str_i_timer_rate_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_timer_slack"
                android:title="@string/str_i_timer_slack_title"
                android:summary="@string/str_i_timer_slack_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_boostpulse_duration"
                android:title="@string/str_i_boostpulse_duration_title"
                android:summary="@string/str_i_boostpulse_duration_summary"
                android:numeric="integer"
                android:inputType="number" />
            <EditTextPreference
                android:key="i_target_loads"
                android:title="@string/str_i_target_loads_title"
                android:summary="@string/str_i_target_loads_summary"
                android:numeric="integer"
                android:inputType="textNoSuggestions" />

        </PreferenceScreen>
    </PreferenceCategory>
         
    
</PreferenceScreen>